Chapter12/12.6_RBAC/backend-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: timeserver
spec:
  replicas: 2
  selector:
    matchLabels:
      pod: timeserver-pod
  template:
    metadata:
      labels:
        pod: timeserver-pod
    spec:
      containers:
        - name: timeserver-container
          image: timeserver-java:6
          resources:
            requests:
              cpu: 200m
              memory: 250Mi
            limits:
              cpu: 300m
              memory: 400Mi
