Chapter12/12.6_RBAC/frontend-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: network-utils
spec:
  replicas: 1
  selector:
    matchLabels:
      app: network-utils
  template:
    metadata:
      labels:
        app: network-utils
    spec:
      containers:
        - name: network-utils
          image: amouat/network-utils
          command: ["/bin/bash"]
          tty: true
          stdin: true
