Chapter12/12.6_RBAC/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: timeserver
spec:
#  sessionAffinity: ClientIP
  selector:
    pod: timeserver-pod
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
  type: ClusterIP
